WebContent/webstatic/css/varsql.db.css
/* ... */
.sql-edit-btn{
    padding: 4px 5px 4px 5px;
    font-size: 14px;
    border:1px solid transparent;
    border-radius: 2px;
	color: inherit;
	text-decoration: none;
}
.sql-edit-btn:hover{
	background-color: #dfdfdf;  
	background: #dfdfdf;
	color: #000000;
	cursor: pointer;
	text-decoration: none; 
}

.sql-btn-info {
    color: #000;
    background-color: #a8e0f1;
    border-color: #a8e0f1;
}

.sql-btn-info:hover{
    color: #fff;
    background-color: #5bc0de;
    border-color: #46b8da;
}

.sql-btn-success {
    color: #333;
    background-color: #afb8ef;
    border-color: #afb8ef;
    border:1px solid #b59d9d;
}
 
.sql-btn-area li.sql-btn-divider{
   height: 21px;
   width: 1px;
   overflow: hidden;
   padding:0px;
   border-right: 1px solid #8c7e7e;
}

/*  sql parameter area start */
.sql-parameter-area{
	display:none;
	width:250px;
	padding: 5px;
	z-index:10;
	height:100%;
	position:absolute;
	right:0px;
	background:#e8f7e8;
	overflow:auto;
	top: 0px;
	border: 1px solid #ddd;
}

.sql-parameter-area table th{
	text-align:center;
}
.on.sql-parameter-area{
	display:block;
}

.sql-parameter-area td{
	padding-top:5px;
}
.sql-parameter-area td >div{
	margin-right:5px;
}

.sql-parameter-area input{
	width:100%;
}	
/*  sql parameter area end */

/* varsql main layout start */
.main-top-menu-wrapper{
	z-index:1000;
	width:100%;
	height:20px;
	position:absolute;
	height: 20px;
	margin-bottom: 1px;
	border-bottom: 1px solid #BBB;
	background-image: -webkit-linear-gradient(#fffcfc,#dcdcdc);
    background-image: -moz-linear-gradient(#fffcfc,#dcdcdc);
    background-image: -ms-linear-gradient(#fffcfc,#dcdcdc);
    background-image: -o-linear-gradient(#fffcfc,#dcdcdc);
    background-image: linear-gradient(#fffcfc,#dcdcdc);
    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fffcfc', endColorstr='#dcdcdc', GradientType=0);
}
.main-body-wrapper{
	height: calc(100% - 20px);
	width:100%;
	margin-top:20px;
	z-index:9;
}

.varsql-dbodbject-schema-area{
	position:relative;
	height:40px;
	width:100%;
	min-width:230px;
}

.varsql-dbodbject-tab-area{
	position:relative;
	height:20px;
	width:100%;
	z-index:1;
}

.varsql-dbodbject-cont-area{
	width:100%;
	height: calc(100% - 60px);
	position:relative;
	z-index: 0;
}

.varsql-pubtab-area{
	position:relative;
	width:100%;
	height: 20px;
	z-index:1;
}

.varsql-pubtab-cont-area{
	width:100%;
	height: calc(100% - 20px);
	position:relative;
	z-index: 0;
}

.varsql-tab-area{
	position:relative;
	height:26px;
	width:100%;
	padding: 3px 0px 0px 3px;
}

.varsql-tab-cont-area{
	width:100%;
	height: calc(100% - 27px);
	position:relative;
}

.varsql-toolbar-area{
	position:relative;
	width:100%;
	height:60px;
	min-width: 380px;
	/*overflow:hidden;*/
}

.varsql-sqleditor-area{
	position:relative;
	width:100%;
	height: calc(100% - 60px);
}

.lm_content{
	background: #f0f4f0;
}

.lm_tab:hover, .lm_tab.lm_active {
    background: ;
    color: #777777;
    
    background-image: -webkit-linear-gradient(#ffffff,#f3f3f3);
    background-image: -moz-linear-gradient(#ffffff,#f3f3f3);
    background-image: -ms-linear-gradient(#ffffff,#f3f3f3);
    background-image: -o-linear-gradient(#ffffff,#f3f3f3);
    background-image: linear-gradient(#ffffff,#f3f3f3);
    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#f3f3f3', GradientType=0);
}

.pos-relative-w-h100{
	width:100%;
	height:100%;
	position:relative;
	-webkit-box-sizing: border-box !important;
    -moz-box-sizing: border-box !important;
    box-sizing: border-box !important;
}
.CodeMirror *{
	box-sizing: content-box;
	font-family: Consolas;
}
.CodeMirror {font-size:13px; width:100%; height:100%;
-webkit-box-sizing: border-box !important;
    -moz-box-sizing: border-box !important;
    box-sizing: border-box !important;
} 
.CodeMirror-scroll {height: 100%;}

.pubGrid{
	border-left: 0px solid #fff !important;
    border-right: 0px solid #fff !important;
}
/* varsql main layout end */


/* sql result btn start */
.log_clear_btn{
	display:none;
}

.sql-result-tab .on .log_clear_btn{
	display:inline-block;
}
/* sql result btn end */


/*sql result msg start*/
.error-log-area{font-size:12px;background:#fbebe7;padding-bottom: 3px;border-bottom: 1px solid #f1e4e4;}
.error-message, .error-line{color:#dd4b39; font-weight: bold;}
.success-log-message{	font-size:12px;color:#000099;padding-bottom: 3px;border-bottom: 1px solid #f1e4e4;}
.log-end-time{font-size:12px;color:#000000;margin-right: 7px;}
/*sql result msg end*/


/*find-text start*/
.find-text-area{
	padding :3px;
}
.find-text-area>.rows{
	padding-top:10px;
	position:relative;
}

.find-text-label{
	width: 100px;
	display: inline-block;
}

.find-text-input-area{
	display: inline-block;
}

.find-text-input-area input{
	width: 160px;
}
.find-text-option-area{
	list-style: none;
    padding: 0px;
    margin: 0px;
	overflow:hidden;
}

.find-text-option-area li{
	float:left;
	width:60%;
	 display:inline-block;
}

.find-text-option-area li:nth-child(odd){
  width:40%;
}


.find-text-button{
	list-style: none;
    padding: 0px;
    margin: 0px;
	overflow:hidden;	
}

.find-text-button li{
	float:left;
	width:50%;
	padding:3px 3px;
}
.find-text-button button{
	width:100%;
}
/*find-text end*/

/* ddl copy start */
.ddl-copy , .ddl-editor-paste{
	padding:2px 10px;
}
/* ddl copy end */


/*export dialog start*/
.export-dialog-area{
	width:100%;
	height:100%;
}
.export-dialog-area>div{
	float:left; 
}

.export-dialog-area .export-column-area{
	width:60%;
	height: 100%;
    overflow: auto;
	border: 1px solid #d0d0d8;
}

.export-dialog-area .export-type-area{
	width: calc(40% - 15px);
    height: 100%;
    overflow: auto;
    padding: 5px 10px;
    margin-left: 10px;
    border: 1px solid #c5caca;
}

.export-dialog-area .export-type{
	margin: 10px 3px;
	padding:0px;
	list-style: none;
}
/* ... */

